# orbitx

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  breakup_smpl_space.py  cal_dist_d2m.py  get_2LEs.py  pyproject.toml  setup.cfg  setup.py  setup_1.py  tox.ini  versioneer.py
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/_modules/: index.html
docs/_build/_sources/: index.rst
docs/_build/_static/: documentation_options.js
docs/content/developer/: backend_documentation.rst  developer_guide.rst
docs/content/user/: api.rst  matchup.rst  orbit.rst  parallel.rst  quickstart.rst  user_guide.rst
examples/: S3A_altika.py  S3A_altika_2019_01.py  S3A_altika_singlethread.py  example_notebook.ipynb  extrapolate_issue.py  minerva.py  return_matchups_example.py  slurm_submit.icelake.minerva.venv  slurm_submit.icelake.singlethread.venv  slurm_submit.skylake.python.venv  test.ipynb
examples/DPAAR/: execute_python.py  generate_python.py  generate_slurm.py  submit_jobs.py
examples/RA/: DPAAR_get_matchups.py  error_log.txt  threshold_investigations_matchups.docx
examples/scratch/test_export/: 2020-02-01_2020-02-01_psi20.0_isi5.0_orbit_S6_SA.nc
examples/test_export/: 2011-12-31_2012-01-01_psi60.0_isi5.0_matchups_CS2_J3_c2c290_tdt900.nc  2011-12-31_2012-01-01_psi60_isi5_matchups_CS2_J3_c2c290_tdt900.nc  2012-01-01_2012-01-01_psi60.0_isi5.0_matchups_CS2_J3_c2c290.0_tdt900.0.nc  20120101_20120101_psi60_isi5_matchups_CS2_J3_c2c290_tdt900.nc  20120101_20120101_psi60_isi5_orbit_CS2.nc  20120101_20120101_psi60_isi5_orbit_J2.nc  2020-02-01_2020-02-01_psi20.0_isi5.0_orbit_S6_SA.nc  20200201_20200201_psi20_isi5_orbit_S6.nc  20200201_20200201_psi20_isi5_orbit_S6_SA.nc  20200201_20200201_psi20_isi5_orbit_SA.nc
orbitx/: OrbitX.py  __init__.py  _version.py  breakup_smpl_space.py  cal_dist_d2m.py  deps.py  form_smpl_space.py  get_2LEs.py  get_tle.py  hackathon.py  interface.py  matchup.py  matchup_test.py  matchups.py  orbit.py  propagate_orbit.py  test_static_class.py  tle.py
orbitx/data/: sea_list.csv  world_capitals.csv
orbitx/data/tle/: TLEset_CS2.txt  TLEset_EMIT.txt  TLEset_J2.txt  TLEset_J3.txt  TLEset_LINCS2.txt  TLEset_LS8.txt  TLEset_LS9.txt  TLEset_N20.txt  TLEset_S2A.txt  TLEset_S2B.txt  TLEset_S3A.txt  TLEset_S3B.txt  TLEset_S6.txt  TLEset_SA.txt
orbitx/tests/: test___init__.py  test_get_2LEs.py  test_get_tle.py  test_matchup.py  test_orbit.py  test_tle.py
orbitx/utils/: _constants.py  _date_utils.py  _xarray_utils.py  interp_circ.py
orbitx/utils/_matchup/: find_matches.py  get_dist.py  get_land_ocean_mask.py  is_land.py  land_mask.py  matchup_dict_to_xarray.py
orbitx/utils/_matchups/: __init__.py  animate_matchups.py  find_matches.py  get_delay.py  get_dist.py  get_land_ocean_mask.py  is_land.py  land_mask.py  landmask.py  matchup_dict_to_xarray.py
quality_documentation/: QualityDocumentation.tex  softwareRequirements.sty  sphinx.sty  sphinxlatextables.sty
quality_documentation/base/: CookiecutterMacros.tex  sil3.tex
quality_documentation/uml/: .$flow_chart.drawio.dtmp  flow_chart.drawio
scripts/: return_matchups_example.py
(+139 files in other folders)
